# SalienceFormer

./: README.md  hw1_revised.tex  pyproject.toml
.claude/: settings.local.json
docs/: AWS_GUIDE.md
evaluation/: __init__.py  ablation.py  comprehensive_eval.py  datasets.py  metrics.py  runner.py  statistics.py  visualization.py
notebooks/: Sanika Colab.ipynb  salienceformer_colab.ipynb
salienceformer/: __init__.py  config.py  losses.py  model.py  train.py
salienceformer/drift/: __init__.py  calibrator.py
salienceformer/memory/: __init__.py  buffer.py
salienceformer/salience/: __init__.py  gate.py
scripts/: generate_paper_figures.py  run_all_experiments.py
scripts/aws/: launch_instance.sh  run_evaluation.sh  run_training.sh  setup.sh
scripts/runpod/: run_training.sh  setup.sh
tests/: test_evaluation.py  test_salienceformer.py
