[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brainllm"
version = "0.2.0"
description = "SalienceFormer: Hippocampal Memory Selection for Transformers"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "torch>=2.0",
    "transformers>=4.36",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
train = [
    "peft>=0.7",
    "datasets>=2.14",
    "accelerate>=0.24",
]
eval = [
    "datasets>=2.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
]
all = [
    "brainllm[dev,train,eval]",
]

[tool.setuptools.packages.find]
include = ["salienceformer*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
